force-app/main/default/objects/Tickets__c/fields/Closed_Flag__c.field-meta.xml
<CustomField>
    <fullName>Closed_Flag__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Closed Flag</label>
    <type>Checkbox</type>
</CustomField>