force-app/main/default/objects/Tickets__c/fields/Customer_Name__c.field-meta.xml
<CustomField>
    <fullName>Customer_Name__c</fullName>
    <label>Non - Existing Customer</label>
    <length>255</length>
    <type>Text</type>
</CustomField>