force-app/main/default/objects/Tickets__c/fields/Departments__c.field-meta.xml
<CustomField>
    <fullName>Departments__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Departments</label>
    <referenceTo>Departments__c</referenceTo>
    <relationshipLabel>Tickets</relationshipLabel>
    <relationshipName>Tickets</relationshipName>
    <type>Lookup</type>
</CustomField>