force-app/main/default/objects/Tickets__c/fields/Existing_Customer__c.field-meta.xml
<CustomField>
    <fullName>Existing_Customer__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Existing Customer</label>
    <referenceTo>Booking__c</referenceTo>
    <relationshipLabel>Tickets</relationshipLabel>
    <relationshipName>Tickets</relationshipName>
    <type>Lookup</type>
</CustomField>