force-app/main/default/objects/Tickets__c/fields/Expected_Closing_Hour__c.field-meta.xml
<CustomField>
    <fullName>Expected_Closing_Hour__c</fullName>
    <label>Expected Closing Hour</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>