force-app/main/default/objects/Tickets__c/fields/Expected_Closing_Time__c.field-meta.xml
<CustomField>
    <fullName>Expected_Closing_Time__c</fullName>
    <label>Expected Closing Time</label>
    <type>DateTime</type>
</CustomField>