force-app/main/default/objects/Tickets__c/fields/Last_Ticket__c.field-meta.xml
<CustomField>
    <fullName>Last_Ticket__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Last Ticket</label>
    <referenceTo>Tickets__c</referenceTo>
    <relationshipLabel>Tickets</relationshipLabel>
    <relationshipName>Tickets</relationshipName>
    <type>Lookup</type>
</CustomField>