force-app/main/default/objects/Tickets__c/fields/Ticket__c.field-meta.xml
<CustomField>
    <fullName>Ticket__c</fullName>
    <label>Ticket</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Fresh</fullName>
            </value>
            <value>
                <fullName>Re Opened</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>