force-app/main/default/objects/Tickets__c/fields/Ticket_Closing_Time__c.field-meta.xml
<CustomField>
    <fullName>Ticket_Closing_Time__c</fullName>
    <label>Ticket Closing Time</label>
    <type>DateTime</type>
</CustomField>