force-app/main/default/objects/Tickets__c/fields/Ticket_Created_Date__c.field-meta.xml
<CustomField>
    <fullName>Ticket_Created_Date__c</fullName>
    <label>Ticket Created Date</label>
    <type>DateTime</type>
</CustomField>