force-app/main/default/objects/Tickets__c/fields/Ticket_Type__c.field-meta.xml
<CustomField>
    <fullName>Ticket_Type__c</fullName>
    <label>Ticket Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>CRM Query</fullName>
            </value>
            <value>
                <fullName>Field Query</fullName>
            </value>
            <value>
                <fullName>Billing Query</fullName>
            </value>
            <value>
                <fullName>Painting</fullName>
            </value>
            <value>
                <fullName>Tiling</fullName>
            </value>
            <value>
                <fullName>Electrical</fullName>
            </value>
            <value>
                <fullName>Plumbing</fullName>
            </value>
            <value>
                <fullName>Masonry</fullName>
            </value>
            <value>
                <fullName>Doors &amp; windows</fullName>
            </value>
            <value>
                <fullName>Flooring</fullName>
            </value>
            <value>
                <fullName>Fabrication (Steel work window grills)</fullName>
            </value>
            <value>
                <fullName>others</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>