force-app/main/default/objects/Tickets__c/fields/Unit_Number__c.field-meta.xml
<CustomField>
    <fullName>Unit_Number__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Unit Number</label>
    <referenceTo>Plot__c</referenceTo>
    <relationshipLabel>Tickets</relationshipLabel>
    <relationshipName>Tickets</relationshipName>
    <type>Lookup</type>
</CustomField>