force-app/main/default/objects/Tickets__c/fields/Update_the_Approval_status__c.field-meta.xml
<CustomField>
    <fullName>Update_the_Approval_status__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Update the Approval status</label>
    <type>Checkbox</type>
</CustomField>