force-app/main/default/objects/Tickets__c/fields/Updated_Closing_Time__c.field-meta.xml
<CustomField>
    <fullName>Updated_Closing_Time__c</fullName>
    <label>Updated Closing Time</label>
    <type>DateTime</type>
</CustomField>